# a2a

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  PROJECT_SUMMARY.md  PUBLISH_CHECKLIST.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  tests.yml
docs/: DEPLOYMENT.md
examples/: README.md
samples/client_examples/: basic_client.py
samples/echo_agent/: main.py
scripts/: setup.py
src/a2a/: __init__.py  exceptions.py
src/a2a/client/: __init__.py  a2a_client.py  card_resolver.py
src/a2a/integrations/: __init__.py  fastapi.py
src/a2a/models/: __init__.py  agent_card.py  message.py  task.py
src/a2a/server/: __init__.py  task_manager.py  task_store.py
tests/: test_basic.py
