[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pompompurin-a2a"
version = "0.1.0"
description = "ðŸ® PomPom-A2A: A delightfully simple Python SDK for the Agent2Agent (A2A) protocol"
authors = [{name = "PomPom-A2A Team", email = "team@pompom-a2a.dev"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["a2a", "agent", "ai", "llm", "protocol", "pompompurin", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "sse-starlette>=1.6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pompompurin-a2a"
Repository = "https://github.com/yourusername/pompompurin-a2a"
Documentation = "https://github.com/yourusername/pompompurin-a2a#readme"
Issues = "https://github.com/yourusername/pompompurin-a2a/issues"
Changelog = "https://github.com/yourusername/pompompurin-a2a/blob/main/CHANGELOG.md"
"A2A Protocol" = "https://a2a-protocol.org"

[tool.hatch.build.targets.wheel]
packages = ["src/a2a"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]